# sochat

./: .gitignore  README.md
client/: Cargo.toml
client/rust_client/: Cargo.toml  README.md
client/rust_client/config/: user.cfg
client/rust_client/src/: main.rs  packets.rs
client/src/: main.rs
server/chat_server/: generate.py  handler.py  main.py
server/chat_server/examples/: run.py
server/sochat/: __main__.py  engine.py  server.py  workflow.txt
